show line number in main view

--- a/rc.conf
+++ b/rc.conf
@@ -57,6 +57,9 @@ set hidden_filter ^\.|\.(?:pyc|pyo|bak|swp)$|^lost\+found$|^__(py)?cache__$
 # Color scheme
 set colorscheme default
 
+# Enable line number in main view
+set line_number
+
 # ===================================================================
 # == Local Options
 # ===================================================================
